# clap

./: CMakeLists.txt  README.md
include/clap/: CMakeLists.txt  clap.cppm  clap.h
tests/: CMakeLists.txt  clap_tests.cpp  simple.cpp
